--- a/src/index.html
+++ b/src/index.html
@@ -122,6 +122,140 @@
         </div>
     </section>
 
+    <!-- Projects Section -->
+    <section class="section" id="work" data-active="false" data-direction="down">
+        <div class="content">
+            <div class="section-header">
+                <h2>Featured Projects</h2>
+                <p class="section-intro">Innovative solutions in AR/VR/MR technology</p>
+            </div>
+            <div class="projects-container">
+                <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-icon">🧬</div>
+                    <h3>VR Cell Culture Training</h3>
+                    <div class="project-content">
+                        <div class="challenge">
+                            <h4>Challenge:</h4>
+                            <p>Physical training of Cell culture is a costly process with realtime equipment.</p>
+                        </div>
+                        <div class="solution">
+                            <h4>Solution:</h4>
+                            <p>Developed step by step training process in VR (Oculus Rift, Meta Quest, HTC Vive Pro, Cosmos) for trainees.</p>
+                        </div>
+                        <div class="tech-tags">
+                            <span>VR</span>
+                            <span>Oculus</span>
+                            <span>HTC Vive</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-icon">🔧</div>
+                    <h3>VR Service Training</h3>
+                    <div class="project-content">
+                        <div class="challenge">
+                            <h4>Challenge:</h4>
+                            <p>Training service teams on handling washing machine in real time during pandemic is very challenging.</p>
+                        </div>
+                        <div class="solution">
+                            <h4>Solution:</h4>
+                            <p>Developed step by step work flows and product knowledge bases in VR to solve functional error in washing machines.</p>
+                        </div>
+                        <div class="tech-tags">
+                            <span>VR</span>
+                            <span>Training</span>
+                            <span>Workflow</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-icon">🌡️</div>
+                    <h3>Delta K IoT Integration</h3>
+                    <div class="project-content">
+                        <div class="challenge">
+                            <h4>Challenge:</h4>
+                            <p>Delta K is a medical samples storage refrigerator. China IoT is a device to connect Delta K remotely to control all attributes of a machine.</p>
+                        </div>
+                        <div class="solution">
+                            <h4>Solution:</h4>
+                            <p>Deployed deltaK with HTC Vice, and ChinaIoT with Augmented reality and Mixed Reality (HoloLens).</p>
+                        </div>
+                        <div class="tech-tags">
+                            <span>AR</span>
+                            <span>MR</span>
+                            <span>HoloLens</span>
+                            <span>IoT</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-icon">🏢</div>
+                    <h3>3D ODC Visualization</h3>
+                    <div class="project-content">
+                        <div class="challenge">
+                            <h4>Challenge:</h4>
+                            <p>Showcase infrastructure and security measures of ODC to external clients before signing the agreement.</p>
+                        </div>
+                        <div class="solution">
+                            <h4>Solution:</h4>
+                            <p>Developed an interactive 3D visualization of ODC with all security features in bird-eye view.</p>
+                        </div>
+                        <div class="tech-tags">
+                            <span>3D</span>
+                            <span>Interactive</span>
+                            <span>WebGL</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-icon">🎮</div>
+                    <h3>AR Office Etiquette Game</h3>
+                    <div class="project-content">
+                        <div class="challenge">
+                            <h4>Challenge:</h4>
+                            <p>Gamified team activities in AHM.</p>
+                        </div>
+                        <div class="solution">
+                            <h4>Solution:</h4>
+                            <p>Developed "Pokémon GO" type of game on office etiquette in AR.</p>
+                        </div>
+                        <div class="tech-tags">
+                            <span>AR</span>
+                            <span>Gaming</span>
+                            <span>Unity</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-icon">🎯</div>
+                    <h3>RISE VR Game</h3>
+                    <div class="project-content">
+                        <div class="challenge">
+                            <h4>Challenge:</h4>
+                            <p>During pandemic unable to conduct the physical gamification activities in the RISE program.</p>
+                        </div>
+                        <div class="solution">
+                            <h4>Solution:</h4>
+                            <p>Developed a VR game in android and deployed to RISE game participants through app store/play store. This VR game was played by more than 40+ participants at the same time.</p>
+                        </div>
+                        <div class="tech-tags">
+                            <span>VR</span>
+                            <span>Android</span>
+                            <span>Multiplayer</span>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Skills Section -->
     <section class="section" id="skills" data-active="false" data-direction="down">
         <div class="content">
