--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,17 @@
 
     <canvas class="webgl"></canvas>
 
+    <!-- Accessibility: Screen reader announcements -->
+    <div id="sr-status" class="sr-only" role="status" aria-live="polite"></div>
+    
+    <!-- Dot Navigation -->
+    <nav class="section-dots" aria-label="Section navigation"></nav>
+
     <div class="sections-container">
     <!-- Hero Section -->
     <section class="section" id="hero" data-active="true">
         <div class="content">
-            <h1>Bringing virtual worlds to life through immersive technology.</h1>
+            <h1>From Imagination to Implementation</h1>
             <p>Hi, I'm <strong>Satya Dev</strong>, an AR/VR/MR Developer and Interactive Technologist with over 16 years of experience in gaming and emerging tech. I specialize in crafting immersive 3D experiences, digital twins, and interactive applications that bridge imagination and reality.</p>
             <div class="cta-buttons">
                 <a href="#work" class="btn">View My Work</a>
@@ -41,23 +47,23 @@
     <section class="section" id="about" data-active="false" data-direction="down">
         <div class="content">
             <h2>About Me</h2>
-            <p class="section-intro">Crafting immersive digital experiences at the intersection of technology and creativity.</p>
+            <p class="section-intro">Designing immersive experiences through innovation.</p>
             <div class="about-wrapper">
                 <div class="about-container">
-                    <div class="about-text">
-                        <p>I'm passionate about blending creativity with technology to shape next-generation digital experiences. Over the years, I've worked with cross-functional teams to design and deploy interactive simulations, digital twin solutions, and 360° walkthroughs for enterprise clients. My journey began in game development, and it evolved into crafting immersive AR/VR applications for global brands.</p>
-                        <div class="quick-facts">
-                            <div class="fact">🌍 Based in Hyderabad, India</div>
-                            <div class="fact">🎮 16+ Years of Experience</div>
-                            <div class="fact">💼 Assistant Manager at Deloitte USI</div>
-                            <div class="fact">☁️ Experienced with Cloud, Unity3D, and WebXR</div>
-                            <div class="fact">📧 satyagames@gmail.com</div>
+                    <div class="about-content-row">
+                        <div class="about-text">
+                            <p>I'm passionate about merging creativity and technology to build next-generation digital experiences. From game development to immersive AR/VR, I've led cross-functional teams delivering interactive simulations, digital twins, and 360° enterprise solutions that transform how global brands engage and innovate.</p>
+                        </div>
+                        <div class="profile-pic-container">
+                            <div class="profile-pic">
+                                <img src="./assets/Satya_pic.jpg" alt="Satya Dev - AR/VR Developer">
+                            </div>
                         </div>
                     </div>
-                    <div class="profile-pic-container">
-                        <div class="profile-pic">
-                            <img src="./assets/Satya_pic.jpg" alt="Satya Dev - AR/VR Developer">
-                        </div>
+                    <div class="quick-facts">
+                        <div class="fact">🎮 16 Years Experience</div>
+                        <div class="fact">💼 Assistant Manager</div>
+                        <div class="fact">☁️ Unity & Cloud</div>
                     </div>
                 </div>
             </div>
@@ -67,8 +73,8 @@
     <!-- Experience Section -->
     <section class="section" id="experience" data-active="false" data-direction="down">
         <div class="content">
-            <h2>Experience Timeline</h2>
-            <p class="section-intro">A journey through my professional evolution in immersive technology.</p>
+            <h2>Experience</h2>
+            <p class="section-intro">A journey through my professional evolution.</p>
             <div class="timeline">
                 <div class="job">
                     <span class="year">2019–Present</span>
@@ -132,7 +138,7 @@
     <section class="section" id="work" data-active="false" data-direction="down">
         <div class="content">
             <div class="section-header">
-                <h2>Featured Projects</h2>
+                <h2>Projects</h2>
                 <p class="section-intro">Innovative solutions in AR/VR/MR technology</p>
             </div>
             
