backgground objects change

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,12 @@
 
     <canvas class="webgl"></canvas>
 
+    <!-- Custom Cursor (desktop only) -->
+    <div id="ux-cursor">
+        <div class="ux-cursor-core"></div>
+        <div class="ux-cursor-ring"></div>
+    </div>
+
     <!-- Accessibility: Screen reader announcements -->
     <div id="sr-status" class="sr-only" role="status" aria-live="polite"></div>
     
